<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="0"
    tools:context=".LicenseActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/key_edt_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/device_id"
        android:textColorHint="@color/adrift_in_dreams"
        android:theme="@style/EditTextThemeOverlay"
        app:boxStrokeColor="@color/adrift_in_dreams"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/icons8_copy_24px"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_edt"
            android:enabled="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textNoSuggestions"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/adrift_in_dreams"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_activate_prodct_2"
        android:textColor="@color/adrift_in_dreams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_edt_layout" />

    <TextView
        android:layout_marginEnd="5dp"
        android:id="@+id/hint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="center|start"
        android:text="@string/hint_get_key1"
        android:textColor="@color/adrift_in_dreams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint1" />

    <TextView
        android:layout_marginEnd="5dp"
        android:id="@+id/hint3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="center|start"
        android:text="@string/hint_get_key2"
        android:textColor="@color/adrift_in_dreams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint2" />

    <TextView
        android:layout_marginEnd="5dp"
        android:id="@+id/hint4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:gravity="center|start"
        android:text="@string/hint_get_key3"
        android:textColor="@color/adrift_in_dreams"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint3" />
    <Button
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/activate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>