<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/row_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/margin_right_handle"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right_handle"
        android:layout_marginStart="@dimen/margin_left"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        />
    <RelativeLayout
        android:id="@+id/front_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_bottom"
        android:paddingTop="@dimen/margin_top"
        >


        <LinearLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_left"
            android:orientation="vertical">
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="@string/name_th"/>
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/licenseplate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="@string/txt_license_plate"/>
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/place_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="@string/txt_visitor_place"/>
            <TextView
                android:layout_marginStart="5dp"
                android:id="@+id/time_appointment_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="@string/txt_appointment_time"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_below="@id/front_view"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/adrift_in_dreams_down"/>

</RelativeLayout>